# llmux

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  astro.config.mjs  build.rs  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
config/: llmux.demo.yaml  llmux.example.yaml
dashboard/data/: dashboard.ts
dashboard/lib/: api.ts  dashboard.ts
dashboard/pages/: index.astro
dashboard/styles/: app.css
docs/: deployment.md  end-to-end.md  stats-api.md
e2e/dashboard/: a11y.spec.ts  smoke.spec.ts
src/: api.rs  cache.rs  classifier.rs  config.rs  cost.rs  eval.rs  logging.rs  main.rs  privacy.rs  providers.rs  router.rs
